rework slider. Add animation

--- a/sad.html
+++ b/sad.html
@@ -8,10 +8,10 @@
 <style>
     .slide-list {
         display: flex;
-        background: yellow;
+        /*background: yellow;*/
         /*height: 500px;*/
         width: 100%;
-        overflow: hidden;
+        transition: 1.5s;
     }
 
     .sli {
