--- a/sad.html
+++ b/sad.html
@@ -11,11 +11,14 @@
         /*background: yellow;*/
         /*height: 500px;*/
         width: 100%;
-        transition: 1.5s;
+        /*transition: 1.5s;*/
     }
 
     .sli {
         height: 20px;
+    }
+    #cont {
+        overflow: hidden;
     }
 </style>
 <body>
